--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: ci
 on:
-  push: { branches: [main] }
+  push:
+    branches: [main]
   pull_request:
 
 jobs:
@@ -8,12 +9,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up Python
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      - run: python -m pip install -U pip
-      - run: pip install pytest black ruff mypy
-      - run: ruff check .
-      - run: black --check .
-      - run: mypy .
-      - run: pytest
+          python-version: '3.9'
+          cache: 'pip'
+
+      - name: Show Python info
+        run: |
+          python -V
+          pip -V
+
+      - name: Install tools
+        run: |
+          python -m pip install -U pip
+          pip install pytest black ruff mypy
+
+      - name: Lint (ruff)
+        run: ruff check .
+
+      - name: Format check (black)
+        run: black --check .
+
+      - name: Type-check (mypy)
+        run: mypy .
+
+      - name: Run tests
+        env:
+          PYTHONPATH: .
+        run: pytest -q
