--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Python
-      - uses: actions/setup-python@v5
+        uses: actions/setup-python@v5
         with:
           python-version: '3.9'
           cache: 'pip'
@@ -24,7 +25,7 @@ jobs:
       - name: Install tools
         run: |
           python -m pip install -U pip
-          pip install pytest black ruff mypy
+          pip install "pytest==8.4.2" "ruff==0.12.11" "black==25.1.0" "mypy==1.17.1"
 
       - name: Lint (ruff)
         run: ruff check .
